fix spacing

--- a/emojihatter/css/index.css
+++ b/emojihatter/css/index.css
@@ -6,32 +6,32 @@ body{
   font-family: 'Roboto Mono', monospace;
   display: flex;
   justify-content: center;
-  /* align-items: flex-start; */
-  min-height:100vh;
+  min-height: calc(100vh - 3.5rem);
 }
 
 img{
   display: block;
   background: rgba(255, 255, 255, 0.3);
-  margin: 1rem auto;
   border:solid 1px rgba(255,255,255,.7);
   width:400px;
   height:400px;
+  margin:  2rem;
 }
 .controls{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transform: translate(0, 3.5rem);
 }
 .block {
   display:flex;
   justify-content:center;
   flex-wrap: wrap;
-  padding: 0 2rem;
 }
 .block.main{
   flex-direction: column;
+  padding: 0 2rem;
 }
 .block.main span {
   font-size: 3rem;
@@ -112,25 +112,7 @@ button:active{
   color: #121212;
   background: white;
 }
-@media only screen and (max-width: 600px) {
-  body{
-    font-size:3rem;
-  }
-  canvas{
-    margin: 1.5rem auto;
-    border-width:5px;
-  }
-  input[type=text]{
-    width: 5rem;
-    height: 3rem;
-    font-size: 3rem;
-    margin:0 0 1rem 1rem;
-  }
-  button{
-    font-size: 5rem;
-    padding: 1rem;
-  }
-}
+
 input.slider {
   -webkit-appearance: none;
   height: .5rem;
